--- a/app/views/preferences/password.html.erb
+++ b/app/views/preferences/password.html.erb
@@ -15,16 +15,12 @@
 	<![endif]-->
 	<%= csrf_meta_tags %>
 </head>
-<body class="login-page">
-	<div class="login-box">
-		<div class="login-box-body">
-			<p class="login-box-msg">Change Password</p>
+<body>
 			<% flash.each do |name, msg| -%>
 				<%= content_tag :div, msg, class: name %>
 			<% end -%>
 			
 			<ul class="nav nav-tabs">
-  				<li role="presentation"><a href="../dashboard/dashboard">Home</a></li>
   				<li role="presentation"  class="active"><a href="password">Security</a></li>
   				<li role="presentation"><a href="#">E-mail</a></li>
 			</ul>
@@ -55,8 +51,6 @@
 					</div><!-- /.col -->
 				</div>
 			<% end %>
-		</div><!-- /.login-box-body -->
-	</div><!-- /.login-box -->
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 </body>
 </html>
