--- a/app/views/preferences/preferences.html.erb
+++ b/app/views/preferences/preferences.html.erb
@@ -15,18 +15,11 @@
 	<![endif]-->
 	<%= csrf_meta_tags %>
 </head>
-<body class="login-page">
-	<div class="login-box">
-		<div class="login-box-body">
-			<p class="login-box-msg">Preferences</p>
+<body>
 			<ul class="nav nav-tabs">
-  				<li role="presentation"><a href="../dashboard/dashboard">Home</a></li>
   				<li role="presentation"><a href="password">Security</a></li>
   				<li role="presentation"><a href="#">E-mail</a></li>
 			</ul>
-			
-		</div><!-- /.login-box-body -->
-	</div><!-- /.login-box -->
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 </body>
 </html>
