--- a/app/views/layouts/_admin_lte_2_header.html.erb
+++ b/app/views/layouts/_admin_lte_2_header.html.erb
@@ -26,7 +26,7 @@
           <!-- Menu Toggle Button -->
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <!-- The user image in the navbar-->
-            <img src="/assets/user2-160x160.jpg" class="user-image" alt="User Image"/>
+           <img src="<%= current_user.profile_image_url %>" class="user-image" alt="User Image"/>
             <!-- hidden-xs hides the username on small devices so only the image appears. -->
             <% if current_user %>
             <span class="hidden-xs"><%= current_user.name %></span>
@@ -36,7 +36,7 @@
           <ul class="dropdown-menu">
             <!-- The user image in the menu -->
             <li class="user-header">
-              <img src="/assets/user2-160x160.jpg" class="img-circle" alt="User Image" />
+              <img src="<%= current_user.profile_image_url %>" class="img-circle" alt="User Image" />
               <p>
                 Alexander Pierce - Web Developer
                 <small>Member since Nov. 2012</small>
