--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -207,57 +207,9 @@
     		<p>Quando você está cadastrado, consegue salvar ingredientes, acessar seu histórico e suas receitas favoritas.</p>
     		<div class="col-md-6">
 
-          <!--TODO: extract to partial -->
-          <div class="login-panel panel panel-default">
-      			<div class="panel-heading">Register a new membership</div>
-      			<div class="panel-body">
-      				<%= form_for(:user, :url => {:controller => 'users', :action => 'create'}) do |f| %>
-      				<fieldset>
-      					<div class="form-group has-feedback">
-      						<%= f.text_field :name, placeholder: "Username", class: 'form-control', autofocus: true%>
-      						<span class="glyphicon glyphicon-user form-control-feedback"></span>
-      					</div>
-      					<div class="form-group has-feedback">
-      						<%= f.text_field :email, placeholder: "Email", class: 'form-control'%>
-      						<span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-      					</div>
-      					<div class="form-group has-feedback">
-      						<%= f.password_field :password, placeholder: "Password", class: 'form-control', autocomplete: 'off'%>
-      		        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-      					</div>
-      					<div class="form-group has-feedback">
-      						<%= f.password_field :password_confirmation, placeholder: "Confirm your password", class: 'form-control', autocomplete: 'off'%>
-      		        <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
-      					</div>
-      					<div class="row">
-      		        <div class="col-xs-8">
-      							<!-- Uncomment next section when we implement agree terms -->
-      		          <!-- <div class="checkbox icheck">
-      		            <label>
-      		              <input type="checkbox"> I agree to the <a href="#">terms</a>
-      		            </label>
-      		          </div> -->
-      		        </div><!-- /.col -->
-      		        <div class="col-xs-4">
-      							<%= f.submit :Register, class: 'btn btn-primary btn-block btn-flat' %>
-      		        </div><!-- /.col -->
-      		      </div>
-      				</fieldset>
-      				<% end %>
-      				<% flash.each do |name, msg| -%>
-      				<%= content_tag :div, msg, class: name %>
-      				<% end -%>
-      				<% if @user && @user.errors.any? %>
-      				<ul class="Signup_Errors">
-      					<% for message_error in @user.errors.full_messages %>
-      					<li>* <%= message_error %></li>
-      					<% end %>
-      				</ul>
-      				<% end %>
-      			</div>
-      		</div>
+                <%= render partial: 'users/register' %>
 
-			  </div>
+			</div>
 			<div class="col-md-6">
 				<div class="image">
 					<img src="http://inhabitat.com/wp-content/blogs.dir/1/files/2015/10/The-R%C3%B6nesans-Mecidiyek%C3%B6y-Office-by-Muum-1.jpg" class="img-responsive">
