--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,57 +4,9 @@
 		<div class="login-logo">
 			<a href="/"><b>Rest</b>rot</a>
 		</div>
-		<div class="login-panel panel panel-default">
-			<div class="panel-heading">Register a new membership</div>
-			<div class="panel-body">
-				<%= form_for(:user, :url => {:controller => 'users', :action => 'create'}) do |f| %>
-				<fieldset>
-					<div class="form-group has-feedback">
-						<%= f.text_field :name, placeholder: "Username", class: 'form-control', autofocus: true%>
-						<span class="glyphicon glyphicon-user form-control-feedback"></span>
-					</div>
-					<div class="form-group has-feedback">
-						<%= f.text_field :email, placeholder: "Email", class: 'form-control'%>
-						<span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-					</div>
-					<div class="form-group has-feedback">
-						<%= f.password_field :password, placeholder: "Password", class: 'form-control', autocomplete: 'off'%>
-		        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-					</div>
-					<div class="form-group has-feedback">
-						<%= f.password_field :password_confirmation, placeholder: "Confirm your password", class: 'form-control', autocomplete: 'off'%>
-		        <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
-					</div>
-					<div class="row">
-		        <div class="col-xs-8">
-							<!-- Uncomment next section when we implement agree terms -->
-		          <!-- <div class="checkbox icheck">
-		            <label>
-		              <input type="checkbox"> I agree to the <a href="#">terms</a>
-		            </label>
-		          </div> -->
-		        </div><!-- /.col -->
-		        <div class="col-xs-4">
-							<%= f.submit :Register, class: 'btn btn-primary btn-block btn-flat' %>
-		        </div><!-- /.col -->
-		      </div>
-				</fieldset>
-				<% end %>
-				<% flash.each do |name, msg| -%>
-				<%= content_tag :div, msg, class: name %>
-				<% end -%>
-				<% if @user && @user.errors.any? %>
-				<ul class="Signup_Errors">
-					<% for message_error in @user.errors.full_messages %>
-					<li>* <%= message_error %></li>
-					<% end %>
-				</ul>
-				<% end %>
-			</div>
-		</div>
-	</div>
+        <%= render partial: 'users/register' %>
+    </div>
 </div>
-
 <script>
 !function ($) {
 	$(document).on("click","ul.nav li.parent > a > span.icon", function(){
