--- a/app/views/layouts/_admin_lte_2_sidebar.html.erb
+++ b/app/views/layouts/_admin_lte_2_sidebar.html.erb
@@ -7,10 +7,12 @@
     <!-- Sidebar user panel (optional) -->
     <div class="user-panel">
       <div class="pull-left image">
-        <img src="<%= current_user.profile_image_url %>" class="img-circle" alt="User Image" />
+        <img src="/assets/user2-160x160.jpg" class="img-circle" alt="User Image" />
       </div>
       <div class="pull-left info">
-        <p><%= current_user.profile_name %></p>
+        <% if current_user %>
+          <p><%= current_user.name %></p>
+        <% end %>
         <!-- Status -->
         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
       </div>
@@ -31,12 +33,12 @@
     <ul class="sidebar-menu">
       <li class="header">Opções</li>
         <!-- Optionally, you can add icons to the links -->
-      <li><a href="<%= url_for(controller: 'dashboard', action: 'dashboard', only_path: true) %>"><i class='fa fa-link'></i> <span>Home</span></a></li>
+      <li class="active"><a href="#"><i class='fa fa-link'></i> <span>Home</span></a></li>
       <li><a href="#"><i class='fa fa-link'></i> <span>Nova Busca</span></a></li>
       <li><a href="#"><i class='fa fa-link'></i> <span>Meus Ingredientes</span></a></li>
       <li><a href="#"><i class='fa fa-link'></i> <span>Favoritos</span></a></li>
       <li><a href="#"><i class='fa fa-link'></i> <span>Histórico</span></a></li>
-      <li><a href="<%= url_for(controller: 'preferences', action: 'preferences', only_path: true) %>"><i class='fa fa-link'></i> <span>Preferências</span></a></li>
+      <li><a href="#"><i class='fa fa-link'></i> <span>Preferências</span></a></li>
       <<!--li class="treeview">
         <a href="#"><i class='fa fa-link'></i> <span>Multilevel</span> <i class="fa fa-angle-left pull-right"></i></a>
         <ul class="treeview-menu">
