--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -45,37 +45,38 @@
     </div><!-- /.col -->
   </div>
   
-  <div class="row margin-top-50">
-    <div class="col-sm-12">
-      <div class="box box-primary">
-        <div class="box-header with-border">
-          <h3 class="box-title">Últimos Ingredientes Cadastrados</h3>
-        </div><!-- /.box-header -->
-        <div class="box-body">
-            <ul class="list-group">
-                <li class="list-group-item">
-                    <a href="#" class="btn-xs pull-right"><i class="fa fa-remove"></i></a>
-                    Arroz Integral
-                </li>
-                <li class="list-group-item">
-                    <a href="#" class="btn-xs pull-right"><i class="fa fa-remove"></i></a>
-                    Tomates Frescos
-                </li>
-                <li class="list-group-item">
-                    <a href="#" class="btn-xs pull-right"><i class="fa fa-remove"></i></a>
-                    Manjericão
-                </li>
-                <li class="list-group-item">
-                    <a href="#" class="btn-xs pull-right"><i class="fa fa-remove"></i></a>
-                    Peito de Frango
-                </li>
-                <li class="list-group-item">
-                    <a href="#" class="btn-xs pull-right"><i class="fa fa-remove"></i></a>
-                    Alecrim
-                </li>
-            </ul>
-          <a href="#" class="btn btn-primary">Ver todos</a>
-        </div><!-- /.box-body -->
-      </div><!-- /.box -->
-    </div><!-- /.col -->
-  </div>
+
+    <div class ="row margin-top-50">
+        <div class="col-md-12">
+            <div class="box box-primary">
+                <div class="box-header with-border">
+                    <h3 class="box-title title">Últimos Ingredientes Cadastrados</h3>
+                </div>
+                <div class="box-body">
+                    <table class="table table-striped">
+                        <tr>
+                            <td class="title"> Ingrediente </td>
+                            <td class="title"> </td>
+                            <td class="title"> Quantidade</td>
+                            <td class="title"> Medida</td>
+                            <td class="title"> Editar</td>
+                            <td class="title"> Excluir</td>
+                        </tr>
+                        <% @ingredients.each do |ingredient| %>
+                        <tr>
+                            <td><class "img"><%= image_tag("#{ingredient.picture}") %> </class></td>
+                            <td><%= ingredient.name %></td>
+                            <td><%= ingredient.quantity %></td>
+                            <td><%= ingredient.unit_of_measure %></td>
+                            <td><spam class="glyphicon glyphicon-edit btn btn-primary"></spam></td>
+                            <td><spam class="glyphicon glyphicon-trash btn btn-danger"></spam></td>
+                        </tr>
+                        <% end %>
+                    </table>
+                </div>
+                <div class="box-header">
+                    <button type="button" class="btn btn-primary" href="ingredients/index">Ver todos</button>
+                </div>
+            </div>
+        </div>
+    </div>
