--- a/app/views/layouts/admin_lte_2.html.erb
+++ b/app/views/layouts/admin_lte_2.html.erb
@@ -26,6 +26,12 @@
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
       <!-- Content Header (Page header) -->
+      <section class="content-header">
+        <h1>
+          Dashboard
+        </h1>
+      </section>
+
       <!-- Main content -->
       <section class="content">
         <% if notice %>
