--- a/app/views/ingredients_users/edit.html.erb
+++ b/app/views/ingredients_users/edit.html.erb
@@ -1,1 +1,10 @@
-<h3>Tela de Edição</h3>
+<h3> <%= @ingredients.first.name %> </h3>
+
+<div class="form-group">
+    <%= form_for @ingredients.first do |f| %>
+        <%= f.label :quantity, "Qual a quantidade desse item que tem disponível? (em #{@ingredients.first.unit_of_measure})"%>
+        <%= f.text_field :quantity, class: "form-control", autofocus: true %>
+        <br>
+        <%= f.submit "Atualizar", class: "btn btn-success center-block" %>
+    <% end %>
+</div>
