--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -30,8 +30,8 @@
                                 <td><%= ingredient.name %></td>
                                 <td><%= ingredient.quantity %></td>
                                 <td><%= ingredient.unit_of_measure %></td>
-                                <td><%= link_to "", edit_ingredients_user_path(ingredient), class: "glyphicon glyphicon-edit btn btn-primary",  %></td>
-                                <td><button class="glyphicon glyphicon-trash btn btn-danger"></button></td>
+                                <td><%= link_to "", edit_ingredients_user_path(ingredient), :class => "glyphicon glyphicon-edit btn btn-primary" %></td>
+                                <td><spam class="glyphicon glyphicon-trash btn btn-danger"></spam></td>
                             </tr>
                             <% end %>
                         <% end %>
