--- a/app/views/layouts/_admin_lte_2_sidebar.html.erb
+++ b/app/views/layouts/_admin_lte_2_sidebar.html.erb
@@ -34,7 +34,7 @@
       <li class="<%= 'active' if params[:controller] == 'dashboard' %>"><a href="<%= url_for(controller: 'dashboard', action: 'dashboard', only_path: true) %>"><i class='fa fa-link'></i> <span>Home</span></a></li>
       <li><a href="#"><i class='fa fa-link'></i> <span>Nova Busca</span></a></li>
       <li class="<%= 'active' if params[:controller] == 'ingredients' %>"><a href="/ingredients/index" id="meus-ingredientes"><i class="fa fa-link"></i> <span>Meus Ingredientes</span></a></li>
-      <li><a href="#"><i class='fa fa-link'></i> <span>Favoritos</span></a></li>
+      <li class="<%= 'active' if params[:controller] == 'favorites' %>"><a href="/favorites/index" id="favoritos"><i class='fa fa-link'></i> <span>Favoritos</span></a></li>
       <li><a href="#"><i class='fa fa-link'></i> <span>Histórico</span></a></li>
       <li class="<%= 'active' if params[:controller] == 'preferences' %>"><a href="<%= url_for(controller: 'preferences', action: 'preferences', only_path: true) %>"><i class='fa fa-link'></i> <span>Preferências</span></a></li>
       <<!--li class="treeview">
