--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -2,11 +2,34 @@
     <div class="col-xs-12">
         <div class="box box-primary">
             <div class="box-header with-border">
-                <h3 class="box-title">Favoritos</h3>
+                <h3 class="box-title title">Favoritos</h3>
             </div>
             <div class="box-body">
-                <div class = "col-xs-3" style="width: 28%"></div>
-                <div class = "col-xs-6">
+                <div class = "col-xs-12">
+                <% if @recipes.first.nil? %>
+                    <div class = 'no-recipe'>
+                        <br>
+                        Você ainda não possui nenhum ingrediente na sua lista! :( <br>
+                        Clique no botão abaixo para adicionar e buscar suas receitas! 
+                    </div>
+                <% end %>
+                <% if @recipes.first %>
+                    <table class="table table-striped">
+                        <tr>
+                            <td class="title"> Foto </td>
+                            <td class="title"> Receita </td>
+                            <td class="title"> Porções </td>
+                        </tr>
+                    
+                        <% @recipes.each do |recipe| %>
+                        <tr>
+                            <td><class "img"><%= image_tag("#{recipe.picture}") %> </class></td>
+                            <td><%= recipe.title %></td>
+                            <td><%= recipe.yield %></td>
+                        </tr>
+                        <% end %>
+                    </table>    
+                <% end %>
                 </div>
             </div>
         </div>
