--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -32,9 +32,9 @@
                                 <td><%= ingredient.unit_of_measure %></td>
                                 <td><spam class="glyphicon glyphicon-edit btn btn-primary"></spam></td>
                                 <td>
-                                  <spam class="glyphicon glyphicon-trash btn btn-danger">
-                                    <%= link_to 'remove', url_for(action: :remove, id: ingredient.id), :method => :delete, data: {confirm: "Are you sure?"} %>
-                                  </spam>
+                                  <%= link_to url_for(action: :remove, id: ingredient.id), method: :delete, data: {confirm: 'Are you sure?'} do%>
+                                    <spam class="glyphicon glyphicon-trash btn btn-danger">
+                                  <% end %>
                                 </td>
                             </tr>
                             <% end %>
