--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,16 +1,14 @@
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-md-10 col-md-offset-1">
         <div class="box box-primary">
             <div class="box-header with-border">
                 <h3 class="box-title title">Favoritos</h3>
             </div>
             <div class="box-body">
-                <div class = "col-xs-12">
                 <% if @recipes.first.nil? %>
                     <div class = 'no-recipe'>
                         <br>
-                        Você ainda não possui nenhum ingrediente na sua lista! :( <br>
-                        Clique no botão abaixo para adicionar e buscar suas receitas! 
+                        Você ainda não favoritou nenhuma receita! :(
                     </div>
                 <% end %>
                 <% if @recipes.first %>
@@ -30,7 +28,6 @@
                         <% end %>
                     </table>    
                 <% end %>
-                </div>
             </div>
         </div>
     </div>
