--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -5,10 +5,24 @@
 .thumbnail{
     position: relative;
     float: left;
+   width: 250px;
+}
+
+h4{
+    width: 240px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+h4:hover{
+    overflow: visible; 
+    white-space: normal;
+    height:auto;  /* just added this line */
 }
 
 .img-recipe{
-    width: 244px;
+    width: 250px;
     height: 180px;
 }
 
@@ -41,4 +55,17 @@
     font-weight: bold;
     font-family : "Palatino Linotype", "Book Antiqua", Palatino, serif;
     text-align: center;
+}
+
+a:link { 
+  color: white;
+}
+a:visited { 
+  color: white;
+}
+a:hover { 
+  color: white;
+}
+a:active { 
+ color: white;
 }
