--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -17,17 +17,18 @@
                </div>
                <% end %>
                <% if @receitasTotais.first %>
-               <% @receitasTotais.each do |recipe| %>
+               <% @receitasTotais.each_with_index do |recipe, i| %>
                <div class="col-md-3">
                   <div class="thumbnail">
                      <class "img"><%= image_tag("#{recipe[:image]}", :class => "img-recipe")%> </class>
                      <div class="caption">
-                        <h3><%=recipe[:name]%></h3>
+                        <h4><%=recipe[:name]%></h4>
                         <p>Calorias: <%=recipe[:calories]%></p>
                         <p> <%=recipe[:ingredients_count]%> ingredientes</p>
                         
-                        <div class="span4 proj-div" data-toggle="modal" data-target="#GSCCModal"><button type="button" class="btn btn-primary">Ver Instruções de Preparo</button></div>
-                        <div id="GSCCModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                        <div class="span4 proj-div" ></div>
+                        <button type="button" class="btn btn-primary"><%= link_to recipe['label'], "Ver Instruções de Preparo", data: {:style=>'color:#FFFFFF;', :class => "css_class", toggle: "modal", target: "#modal#{i}"} %></button>
+                        <div id="modal<%= i %>" class="modal fade" role="dialog">
                            <div class="modal-dialog modal-lg">
                               <div class="modal-content">
                                  <div class="modal-header">
@@ -43,6 +44,7 @@
                                     </div>
                                     <div class ="modal-text col-md-9">
                                        <div class="model-subtitle">Modo de Preparo: </div>
+                                       
                                        <br>
                                     </div>
                                     <button type="button" class="btn btn-primary center-block" data-dismiss="modal">Close</button>
